--- a/index.html
+++ b/index.html
@@ -2,17 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=Grant_Howard.vcf">
-  <title>Grant Howard vCard</title>
+  <title>Grant Howard | Digital Business Card</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Social preview -->
+  <meta property="og:title" content="Grant Howard – Mechanical Engineer">
+  <meta property="og:description" content="Connect with Grant, view résumé or save contact details in one tap."/>
+  <meta property="og:image" content="https://example.com/preview.jpg"/>
   <style>
-    body{font-family:system-ui,Arial,sans-serif;
-         display:flex;justify-content:center;align-items:center;
-         height:100vh;margin:0;background:#f5f5f5;color:#333}
-    a{color:#0077b5;font-weight:600;text-decoration:none}
+    :root {
+      --accent: #0077b5; /* LinkedIn blue */
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #f9fafb;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+    main {
+      background: #fff;
+      width: 100%;
+      max-width: 460px;
+      padding: 2.5rem 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 8px 14px rgba(0,0,0,.08);
+      text-align: center;
+    }
+    .avatar {
+      width: 128px;
+      height: 128px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 0 auto 1.25rem;
+    }
+    h1 { font-size: 1.9rem; margin: 0; }
+    .tagline { font-size: .95rem; color: #555; margin-bottom: 1.75rem; }
+    a.btn {
+      display: block;
+      margin: .5rem 0;
+      padding: .85rem 1rem;
+      border-radius: .5rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: #fff;
+      transition: filter .15s;
+    }
+    a.btn:hover { filter: brightness(1.08); }
+    .linkedin { background: var(--accent); }
+    .email    { background: #d44638; }
+    .phone    { background: #28a745; }
+    .resume   { background: #6c63ff; }
+    .vcard    { background: #111; }
+    footer { margin-top: 2rem; font-size: .75rem; color: #888; }
   </style>
 </head>
 <body>
-  If you aren’t redirected automatically,
-  <a href="Grant_Howard.vcf">download my contact card</a>.
+  <main>
+    <img src="avatar.jpg" alt="Grant Howard headshot" class="avatar">
+    <h1>Grant Howard</h1>
+    <p class="tagline">Mechanical Engineer | Makerspace Technician</p>
+
+    <a class="btn linkedin" href="https://www.linkedin.com/in/grant-howard-235a54271/" target="_blank" rel="noopener">Connect on LinkedIn</a>
+    <a class="btn email" href="mailto:Grhoward56@gmail.com">Email Me</a>
+    <a class="btn phone" href="tel:+18327582870">Call / Text</a>
+    <a class="btn resume" href="Grant_Howard_Resume.pdf" target="_blank" rel="noopener">View Résumé (PDF)</a>
+    <a class="btn vcard" href="Grant_Howard.vcf" download>Save Contact (vCard)</a>
+
+    <footer>
+      Powered by QR · Last updated Apr&nbsp;25&nbsp;2025
+    </footer>
+  </main>
 </body>
 </html>
